[package]
name = "glow2whatever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
buttplug = { version="7.0.2", optional = true}
chrono = { version = "0.4.24", features = ["serde"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
rumqttc = { version = "0.20.0", features = ["url"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }

[features]
default = []
butt = ["buttplug"]

[[bin]]
name = "glow2prom"

[[bin]]
name = "glow2butt"
required-features = ["butt"]

[lib]
