[package]
name = "glow2whatever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
buttplug = { version="7.0.2", optional = true}
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
lazy_static = "1.4.0"
prometheus = "0.13.3"
rumqttc = { version = "0.20.0", features = ["url"] }
sd-notify = "0.4.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tracing = { version = "0.1.38", features = ["log", "release_max_level_info"] }
tracing-actix-web = "0.7.4"
tracing-journald = "0.3.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[features]
default = []
butt = ["buttplug"]

[[bin]]
name = "glow2prom"

[[bin]]
name = "glow2butt"
required-features = ["butt"]

[lib]
